apps/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: apps
spec:
  selector:
    app: portfolio
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
